--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "apguru-server",
+  "version": "1.0.0",
+  "description": "This is the server for AP guru Webflow frontend",
+  "main": "server.js",
+  "scripts": {
+    "start": "NODE_ENV=production node server",
+    "dev": "nodemon server"
+
+  },
+  "author": "Tejus Kabadi",
+  "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
