--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "NODE_ENV=production node server",
     "dev": "nodemon server"
-
   },
   "author": "Tejus Kabadi",
   "license": "ISC",
   "dependencies": {
+    "airtable": "^0.11.3",
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
